[tool.poetry]
name = "dio-python-banksystem"
version = "0.1.0"
description = ""
authors = ["Adam Fabricio Silveira Silva <62869107+adam-fabricio@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "dio_python_banksystem"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
